# zed

./: ARCHITECTURE.md  Cargo.toml  GPUI_ARCHITECTURE_ISSUES.md  GPUI_PERF_ANALYSIS.md  GPUI_TCP_READ_ANALYSIS.md  PERF_ANALYSIS.md  PROOF_GPUI_INFLUENCE.md  PROOF_GPUI_INFLUENCE_SIMPLE.md  README.md  THREAD_ANALYSIS.md  mock.md  test_ollama.rs  test_ollama_Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: thread.rs  tools.rs
crates/agent_ui/: AGENT_TABS_ANALYSIS.md  Cargo.toml  TABS_IMPLEMENTATION_GUIDE.md  tabs_plan.md
crates/agent_ui/examples/: tab_rendering_methods.rs  tabs_integration_example.rs
crates/agent_ui/scripts/: run_tabs_tests.sh
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  text_thread_editor.rs
crates/agent_ui/tests/: FINAL_REPORT.md  README_TABS_TESTS.md  TABS_TESTING_RESULTS.md  tabs_testing_guide.md  tabs_tests.rs
crates/anthropic/src/: anthropic.rs
crates/crashes/: Cargo.toml
crates/crashes/src/: crashes.rs
crates/google_ai/src/: google_ai.rs
crates/gpui/src/: executor.rs
crates/language_models/src/: settings.rs
crates/lmstudio/: Cargo.toml
crates/lmstudio/src/: lmstudio.rs
crates/ollama/: Cargo.toml
crates/ollama/src/: ollama.rs  ollama_direct.rs
crates/project/src/: project_search.rs
crates/settings_content/src/: agent.rs  language_model.rs
crates/zed/: Cargo.toml
notes/: changes.md
test_ollama/: Cargo.toml
test_ollama/src/: main.rs
test_ollama2/: Cargo.toml
test_ollama2/src/: main.rs
test_ollama3/: Cargo.toml
test_ollama3/src/: main.rs
test_ollama_headless/: Cargo.toml  README.md  run_headless_test.sh
test_ollama_plugin/: Cargo.toml
test_ollama_plugin/src/: main.rs
(+20 files in other folders)
