[package]
name = "test_ollama_headless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_ollama_headless"
path = "src/main.rs"

[workspace]

[dependencies]
gpui = { path = "../crates/gpui", default-features = false, features = [] }
ollama = { path = "../crates/ollama" }
reqwest_client = { path = "../crates/reqwest_client" }
http_client = { path = "../crates/http_client" }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
