[package]
name = "ollama"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ollama.rs"

[features]
default = []
schemars = ["dep:schemars"]

[dependencies]
anyhow.workspace = true
futures.workspace = true
http_client.workspace = true
log.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
url.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"